[project]
name = "RAG_Doc_Preprocessing"
version = "0.1.0"
description = "Doc_Preprocessing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "concurrent-log-handler>=0.9.28",
    "duckdb>=1.4.0",
    "matplotlib>=3.10.6",
    "openai>=1.65.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "termcolor>=2.5.0",
    "tqdm>=4.67.1",
]

[tool.setuptools]
py-modules = []

